Enlaces al formulario

--- a/Proyecto Integrador-WEB-UNTREFSCHOOL/formulario.html
+++ b/Proyecto Integrador-WEB-UNTREFSCHOOL/formulario.html
@@ -17,10 +17,10 @@
     <h1 class="titulo"><span>UntrefSchool</span></h1>
     <img class="header-image" src="./img/sangga-rima-roman-selia-LjbjWeXRbs0-unsplash.jpg" alt="Imagen de la escuela">
     <nav class="navbar">
-      <a href="#quienes-somos">Quienes somos</a>
-      <a href="#por-que-elegirnos">¿Por qué elegirnos?</a>
-      <a href="#propuesta-educativa">Propuesta educativa</a>
-      <a href="#ultimas-noticias">Últimas noticias</a>
+      <a href="index.html#quienes-somos">Quienes somos</a>
+      <a href="index.html#por-que-elegirnos">¿Por qué elegirnos?</a>
+      <a href="index.html#propuesta-educativa">Propuesta educativa</a>
+      <a href="index.html#ultimas-noticias">Últimas noticias</a>
       <a href="index.html" >Volver</a>
     </nav>
   </header>
