--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <li><a class="social-icon" href="https://twitter.com/untref">
           <i class="fab fa-twitter"></i>
         </a></li>
-        <li><a class="social-icon" href="https://www.linkedin.com/school/universidad-nacional-de-tres-de-febrero/?originalSubdomain=es">
+        <li><a class="social-icon" href="https://www.instagram.com/untref/">
           <i class="fab fa-instagram"></i>
         </a></li>
       </ul>
