--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="card-body">
           <h2 class="card-title">Quienes somos</h2>
           <p class="card-text">Somos una institución educativa primaria que brinda una formación integral, innovadora y de calidad a nuestros estudiantes. Contamos con un equipo docente comprometido, una infraestructura moderna y un ambiente seguro y acogedor.</p>
-          <p>Nuestra misión es ofrecer una educación primaria de excelencia, basada en el desarrollo de competencias, valores y habilidades para la vida. Nuestra visión es ser una institución líder y referente en el ámbito educativo, que forma ciudadanos responsables, creativos y solidarios.</p></p>
+          <p>Nuestra misión es ofrecer una educación primaria de excelencia, basada en el desarrollo de competencias, valores y habilidades para la vida. Nuestra visión es ser una institución líder y referente en el ámbito educativo, que forma ciudadanos responsables, creativos y solidarios.</p>
         </div>
         <img src="./img/Maestros3 (1).jpg" class="card-img-bottom" alt="card-img-bottom">
       </div>
@@ -84,7 +84,7 @@
       <h2>Propuesta educativa</h2>
       <p>Nuestra propuesta educativa se basa en un modelo integral que se enfoca en el desarrollo de las habilidades académicas, sociales y emocionales de nuestros estudiantes.</p>
       <p>Ofrecemos una variedad de programas y actividades que ayudan a nuestros estudiantes a desarrollar sus habilidades académicas, tales como:</p>
-      <ul>
+      
       <div class="row row-cols-1 row-cols-sm-2 g-3">
         <div class="col">
           <div class="card">
@@ -115,7 +115,6 @@
           </div>
         </div>
       </div>
-      
     </section>
     <a href="#top">
       <i class="fas fa-arrow-up"></i>
