Eliminacion imagenes sobrantes y nombres

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1 class="titulo"><span>UntrefSchool</span></h1>
       <img
         class="header-image"
-        src="./img/sangga-rima-roman-selia-LjbjWeXRbs0-unsplash.jpg"
+        src="./img/Escuela.jpg"
         alt="Imagen de la escuela"
       />
       <nav class="navbar">
@@ -48,7 +48,7 @@
             </p>
           </div>
           <img
-            src="./img/Maestros3 (1).jpg"
+            src="./img/Maestros-ninos.jpg"
             class="card-img-bottom"
             alt="card-img-bottom"
           />
@@ -121,7 +121,7 @@
           </div>
           <div class="card">
             <img
-              src="./img/Maestros2.jpg"
+              src="./img/Maestros.jpg"
               class="card-img-top"
               alt="card-group-image"
             />
