Nombres alternativos Imagenes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <img
             src="./img/Maestros-ninos.jpg"
             class="card-img-bottom"
-            alt="card-img-bottom"
+            alt="Maestro-con-chicos"
           />
         </div>
       </section>
@@ -64,7 +64,7 @@
             <img
               src="./img/Diplomados.jpg"
               class="card-img-top"
-              alt="card-group-image"
+              alt="Diplomados"
             />
             <div class="card-body">
               <p class="card-text"></p>
@@ -95,7 +95,7 @@
             <img
               src="./img/Salon-niños.jpg"
               class="card-img-top"
-              alt="card-group-image"
+              alt="Salon-niños"
             />
             <div class="card-body">
               <p class="card-text"></p>
@@ -123,7 +123,7 @@
             <img
               src="./img/Maestros.jpg"
               class="card-img-top"
-              alt="card-group-image"
+              alt="Maestros"
             />
             <div class="card-body">
               <p class="card-text"></p>
@@ -170,7 +170,7 @@
               <img
                 src="./img/Taller-arte.jpg"
                 class="card-img-top"
-                alt="card-grid-image"
+                alt="Taller-arte"
               />
               <div class="card-body">
                 <p class="card-text"></p>
@@ -188,7 +188,7 @@
               <img
                 src="./img/volei.jpg"
                 class="card-img-top"
-                alt="card-grid-image"
+                alt="Volei"
               />
               <div class="card-body">
                 <p class="card-text"></p>
