--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="author" content="Cristian Derudi" />
     <meta name="description" content="PROYECTO INTEGRADOR-WEB-UNTREFSCHOOL" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
     <title>Escuela Primaria Untref</title>
     <link
       rel="stylesheet"
