Eliminacion titulo duplicado y agregado Favicon

--- a/formulario.html
+++ b/formulario.html
@@ -5,17 +5,17 @@
     <meta name="author" content="Cristian Derudi">
     <meta name="description" content="PROYECTO INTEGRADOR-WEB-UNTREFSCHOOL">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>Formulario</title>
 </head>
 <body>
-    <title>Formulario de Contacto</title>
-</head>
-<body>
   <header class="content">
     <h1 class="titulo"><span>UntrefSchool</span></h1>
-    <img class="header-image" src="./img/sangga-rima-roman-selia-LjbjWeXRbs0-unsplash.jpg" alt="Imagen de la escuela">
+    <img class="header-image" src="./img/Escuela.jpg" alt="Imagen de la escuela">
     <nav class="navbar">
       <a href="index.html#quienes-somos">Quienes somos</a>
       <a href="index.html#por-que-elegirnos">¿Por qué elegirnos?</a>
